// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dew point diagram with 11-day data 1`] = `
<div>
  <div
    class="bx--col"
  >
    <div
      class="bx--tile"
    >
      <div
        data-testid="dew-point-diagram"
        style=""
      >
        <h3>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="32"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 10a4 4 0 114-4A4.0045 4.0045 0 0124 10zm0-6a2 2 0 102 2A2.0021 2.0021 0 0024 4zM14.5 30A5.4962 5.4962 0 019 24.52c0-3.4426 4.3442-21.0141 4.5293-21.76a1 1 0 011.9414 0C15.6558 3.5059 20 21.0774 20 24.52A5.4962 5.4962 0 0114.5 30zm0-22.7561C13.0391 13.38 11 22.4089 11 24.52a3.5 3.5 0 007 0C18 22.4089 15.9609 13.38 14.5 7.2439z"
            />
          </svg>
          Dew point
        </h3>
        <div
          class="diagram"
          style="height: 300px;"
        >
          <div
            style="width: 100%; height: 100%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`felt temperature diagram with 11-day data 1`] = `
<div>
  <div
    class="bx--col"
  >
    <div
      class="bx--tile"
    >
      <div
        data-testid="felt-temperature-diagram"
        style=""
      >
        <h3>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="32"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M26 30H22a2.0059 2.0059 0 01-2-2V21a2.0059 2.0059 0 01-2-2V13a2.9465 2.9465 0 013-3h6a2.9465 2.9465 0 013 3v6a2.0059 2.0059 0 01-2 2v7A2.0059 2.0059 0 0126 30zM21 12a.9448.9448 0 00-1 1v6h2v9h4V19h2V13a.9448.9448 0 00-1-1zM24 9a4 4 0 114-4h0A4.0118 4.0118 0 0124 9zm0-6a2 2 0 102 2h0a2.0059 2.0059 0 00-2-2zM10 20.1839V12H8v8.1839a3 3 0 102 0z"
            />
            <path
              d="M9,30A6.9931,6.9931,0,0,1,4,18.1108V7A5,5,0,0,1,14,7V18.1108A6.9931,6.9931,0,0,1,9,30ZM9,4A3.0033,3.0033,0,0,0,6,7V18.9834l-.332.2983a5,5,0,1,0,6.664,0L12,18.9834V7A3.0033,3.0033,0,0,0,9,4Z"
            />
          </svg>
          Felt temperature
        </h3>
        <div
          class="diagram"
          style="height: 300px;"
        >
          <div
            style="width: 100%; height: 100%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`temperature combined diagram with 11-day data 1`] = `
<div>
  <div
    class="bx--col"
  >
    <div
      class="bx--tile"
    >
      <div
        data-testid="temperature-combined-diagram"
        style=""
      >
        <h3>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="32"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 17.26V6A4 4 0 005 6V17.26a7 7 0 108 0zM9 4a2 2 0 012 2v7H7V6A2 2 0 019 4zM9 28a5 5 0 01-2.5-9.33l.5-.28V15h4v3.39l.5.28A5 5 0 019 28zM20 4H30V6H20zM20 10H27V12H20zM20 16H30V18H20zM20 22H27V24H20z"
            />
          </svg>
          Temperature, Felt temperature and Dew point (Ø per day)
        </h3>
        <div
          class="diagram"
          style="height: 300px;"
        >
          <div
            style="width: 100%; height: 100%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`temperature diagram with 11-day data 1`] = `
<div>
  <div
    class="bx--col"
  >
    <div
      class="bx--tile"
    >
      <div
        data-testid="temperature-diagram"
        style=""
      >
        <h3>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="32"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 17.26V6A4 4 0 005 6V17.26a7 7 0 108 0zM9 4a2 2 0 012 2v7H7V6A2 2 0 019 4zM9 28a5 5 0 01-2.5-9.33l.5-.28V15h4v3.39l.5.28A5 5 0 019 28zM20 4H30V6H20zM20 10H27V12H20zM20 16H30V18H20zM20 22H27V24H20z"
            />
          </svg>
          Temperature
        </h3>
        <div
          class="diagram"
          style="height: 300px;"
        >
          <div
            style="width: 100%; height: 100%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`temperature min max diagram with 11-day data 1`] = `
<div>
  <div
    class="bx--col"
  >
    <div
      class="bx--tile"
    >
      <div
        data-testid="temperature-min-max-diagram"
        style=""
      >
        <h3>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="32"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 10H27V12H20zM20 16H30V18H20zM20 22H27V24H20zM10 20.1839V7H8V20.1839a3 3 0 102 0z"
            />
            <path
              d="M30,4H12.9744A4.9829,4.9829,0,0,0,4,7V18.1108a7,7,0,1,0,10,0V7a5.0019,5.0019,0,0,0-.1011-1H30ZM9,28a4.9933,4.9933,0,0,1-3.332-8.7183L6,18.9834V7a3,3,0,0,1,6,0V18.9834l.332.2983A4.9933,4.9933,0,0,1,9,28Z"
            />
          </svg>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="32"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 4H27V6H20zM20 10H30V12H20zM20 16H27V18H20zM12 23a3 3 0 01-6 0z"
            />
            <path
              d="M30,22H15.9192A7.0107,7.0107,0,0,0,14,18.1108V7A5,5,0,0,0,4,7V18.1108A6.9946,6.9946,0,1,0,15.92,24H30ZM9,28a4.9933,4.9933,0,0,1-3.332-8.7183L6,18.9834V7a3,3,0,0,1,6,0V18.9834l.332.2983A4.9933,4.9933,0,0,1,9,28Z"
            />
          </svg>
          Minimum, maximum and average temperature
        </h3>
        <div
          class="bx--row"
        >
          <div
            class="bx--col-sm-6 bx--col-lg-6 bx--col-max-6"
          >
            <div
              class="bx--content-switcher bx--content-switcher--md"
              role="tablist"
            >
              <button
                aria-selected="true"
                class="bx--content-switcher-btn bx--content-switcher--selected"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="bx--content-switcher__label"
                  title="Daily"
                >
                  Daily
                </span>
              </button>
              <button
                aria-selected="false"
                class="bx--content-switcher-btn"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="bx--content-switcher__label"
                  title="Monthly"
                >
                  Monthly
                </span>
              </button>
              <button
                aria-selected="false"
                class="bx--content-switcher-btn"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="bx--content-switcher__label"
                  title="Yearly"
                >
                  Yearly
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="content bx--row"
        >
          <div
            class="bx--col-sm-12 bx--col-lg-12 bx--col-max-4"
          >
            <div
              class="bx--data-table-container"
            >
              <div
                class="bx--data-table-content"
              >
                <table
                  class="bx--data-table bx--data-table--short bx--data-table--sort bx--data-table--no-border"
                >
                  <thead>
                    <tr>
                      <th
                        aria-sort="ascending"
                        scope="col"
                      >
                        <div
                          id="table-sort-1"
                          style="display: none;"
                        >
                          Click to sort rows by [object Object] header in descending order
                        </div>
                        <button
                          aria-describedby="table-sort-1"
                          class="bx--table-sort bx--table-sort--active"
                          data-column-id="timeParsed"
                          data-sort-cycle="tri-states-from-ascending"
                          data-sort-direction="ASC"
                          type="button"
                        >
                          <span
                            class="bx--table-sort__flex"
                          >
                            <div
                              class="bx--table-header-label"
                            >
                              <div
                                style="display: flex; align-items: center; justify-content: space-between;"
                              >
                                <div
                                  style="margin-right: 20px;"
                                >
                                  Time
                                   
                                  <br />
                                  <span
                                    class="bx--type-helper-text-01"
                                  />
                                </div>
                                <button
                                  aria-describedby="icon-tooltip-1"
                                  class="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--bottom bx--tooltip--align-start"
                                  style="cursor: default;"
                                  type="button"
                                >
                                  <span
                                    class="bx--assistive-text"
                                    id="icon-tooltip-1"
                                  >
                                    Date format is YYYY/MM/DD HH:mm
                                  </span>
                                  <svg
                                    aria-hidden="true"
                                    fill="currentColor"
                                    focusable="false"
                                    height="16"
                                    preserveAspectRatio="xMidYMid meet"
                                    viewBox="0 0 16 16"
                                    width="16"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
                                    />
                                    <path
                                      d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
                                    />
                                  </svg>
                                </button>
                              </div>
                            </div>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon-unsorted"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </span>
                        </button>
                      </th>
                      <th
                        aria-sort="none"
                        scope="col"
                      >
                        <div
                          id="table-sort-2"
                          style="display: none;"
                        >
                          Click to sort rows by [object Object] header in ascending order
                        </div>
                        <button
                          aria-describedby="table-sort-2"
                          class="bx--table-sort"
                          data-column-id="temperature_min"
                          data-sort-cycle="tri-states-from-ascending"
                          data-sort-direction="NONE"
                          type="button"
                        >
                          <span
                            class="bx--table-sort__flex"
                          >
                            <div
                              class="bx--table-header-label"
                            >
                              <div
                                style="display: flex; align-items: center; justify-content: space-between;"
                              >
                                <div
                                  style="margin-right: 20px;"
                                >
                                  Minimum
                                   
                                  <br />
                                  <span
                                    class="bx--type-helper-text-01"
                                  >
                                    in °C
                                  </span>
                                </div>
                              </div>
                            </div>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon-unsorted"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </span>
                        </button>
                      </th>
                      <th
                        aria-sort="none"
                        scope="col"
                      >
                        <div
                          id="table-sort-3"
                          style="display: none;"
                        >
                          Click to sort rows by [object Object] header in ascending order
                        </div>
                        <button
                          aria-describedby="table-sort-3"
                          class="bx--table-sort"
                          data-column-id="temperature_average"
                          data-sort-cycle="tri-states-from-ascending"
                          data-sort-direction="NONE"
                          type="button"
                        >
                          <span
                            class="bx--table-sort__flex"
                          >
                            <div
                              class="bx--table-header-label"
                            >
                              <div
                                style="display: flex; align-items: center; justify-content: space-between;"
                              >
                                <div
                                  style="margin-right: 20px;"
                                >
                                  Average
                                   
                                  <br />
                                  <span
                                    class="bx--type-helper-text-01"
                                  >
                                    in °C
                                  </span>
                                </div>
                              </div>
                            </div>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon-unsorted"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </span>
                        </button>
                      </th>
                      <th
                        aria-sort="none"
                        scope="col"
                      >
                        <div
                          id="table-sort-4"
                          style="display: none;"
                        >
                          Click to sort rows by [object Object] header in ascending order
                        </div>
                        <button
                          aria-describedby="table-sort-4"
                          class="bx--table-sort"
                          data-column-id="temperature_max"
                          data-sort-cycle="tri-states-from-ascending"
                          data-sort-direction="NONE"
                          type="button"
                        >
                          <span
                            class="bx--table-sort__flex"
                          >
                            <div
                              class="bx--table-header-label"
                            >
                              <div
                                style="display: flex; align-items: center; justify-content: space-between;"
                              >
                                <div
                                  style="margin-right: 20px;"
                                >
                                  Maximum
                                   
                                  <br />
                                  <span
                                    class="bx--type-helper-text-01"
                                  >
                                    in °C
                                  </span>
                                </div>
                              </div>
                            </div>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon-unsorted"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </span>
                        </button>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    aria-live="polite"
                  >
                    <tr
                      data-row-id="04032021"
                    >
                      <td>
                        2021/03/04
                      </td>
                      <td>
                        -0.8
                      </td>
                      <td>
                        -0.3
                      </td>
                      <td>
                        0.4
                      </td>
                    </tr>
                    <tr
                      data-row-id="05032021"
                    >
                      <td>
                        2021/03/05
                      </td>
                      <td>
                        -7.1
                      </td>
                      <td>
                        -4.3
                      </td>
                      <td>
                        0.2
                      </td>
                    </tr>
                    <tr
                      data-row-id="06032021"
                    >
                      <td>
                        2021/03/06
                      </td>
                      <td>
                        -6.5
                      </td>
                      <td>
                        -4.1
                      </td>
                      <td>
                        -2.1
                      </td>
                    </tr>
                    <tr
                      data-row-id="07032021"
                    >
                      <td>
                        2021/03/07
                      </td>
                      <td>
                        -4.7
                      </td>
                      <td>
                        -3.2
                      </td>
                      <td>
                        -2
                      </td>
                    </tr>
                    <tr
                      data-row-id="08032021"
                    >
                      <td>
                        2021/03/08
                      </td>
                      <td>
                        -9.2
                      </td>
                      <td>
                        -4.8
                      </td>
                      <td>
                        -0.4
                      </td>
                    </tr>
                    <tr
                      data-row-id="09032021"
                    >
                      <td>
                        2021/03/09
                      </td>
                      <td>
                        -10.5
                      </td>
                      <td>
                        -8.1
                      </td>
                      <td>
                        -7
                      </td>
                    </tr>
                    <tr
                      data-row-id="10032021"
                    >
                      <td>
                        2021/03/10
                      </td>
                      <td>
                        -7.5
                      </td>
                      <td>
                        -4.4
                      </td>
                      <td>
                        -2.3
                      </td>
                    </tr>
                    <tr
                      data-row-id="11032021"
                    >
                      <td>
                        2021/03/11
                      </td>
                      <td>
                        -1.9
                      </td>
                      <td>
                        1.8
                      </td>
                      <td>
                        5.1
                      </td>
                    </tr>
                    <tr
                      data-row-id="12032021"
                    >
                      <td>
                        2021/03/12
                      </td>
                      <td>
                        -3.2
                      </td>
                      <td>
                        -0.3
                      </td>
                      <td>
                        2.9
                      </td>
                    </tr>
                    <tr
                      data-row-id="13032021"
                    >
                      <td>
                        2021/03/13
                      </td>
                      <td>
                        -0.9
                      </td>
                      <td>
                        0.7
                      </td>
                      <td>
                        2.3
                      </td>
                    </tr>
                    <tr
                      data-row-id="14032021"
                    >
                      <td>
                        2021/03/14
                      </td>
                      <td>
                        -1.2
                      </td>
                      <td>
                        0.2
                      </td>
                      <td>
                        2.1
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                class="bx--pagination"
              >
                <div
                  class="bx--pagination__left"
                >
                  <label
                    class="bx--pagination__text"
                    for="bx-pagination-select-1"
                    id="bx-pagination-select-1-count-label"
                  >
                    Items per page:
                  </label>
                  <div
                    class="bx--form-item"
                  >
                    <div
                      class="bx--select bx--select--inline bx--select__item-count"
                    >
                      <div
                        class="bx--select-input--inline__wrapper"
                      >
                        <div
                          class="bx--select-input__wrapper"
                        >
                          <select
                            class="bx--select-input"
                            id="bx-pagination-select-1"
                          >
                            <option
                              class="bx--select-option"
                              value="20"
                            >
                              20
                            </option>
                          </select>
                          <svg
                            aria-hidden="true"
                            class="bx--select__arrow"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    class="bx--pagination__text bx--pagination__items-count"
                  >
                    1–11 of 11 items
                  </span>
                </div>
                <div
                  class="bx--pagination__right"
                >
                  <div
                    class="bx--form-item"
                  >
                    <div
                      class="bx--select bx--select--inline bx--select__page-number"
                    >
                      <label
                        class="bx--label bx--visually-hidden"
                        for="bx-pagination-select-1-right"
                      >
                        Page number, of 1 pages
                      </label>
                      <div
                        class="bx--select-input--inline__wrapper"
                      >
                        <div
                          class="bx--select-input__wrapper"
                        >
                          <select
                            class="bx--select-input"
                            id="bx-pagination-select-1-right"
                          >
                            <option
                              class="bx--select-option"
                              value="1"
                            >
                              1
                            </option>
                          </select>
                          <svg
                            aria-hidden="true"
                            class="bx--select__arrow"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    class="bx--pagination__text"
                  >
                    of 1 page
                  </span>
                  <div
                    class="bx--pagination__control-buttons"
                  >
                    <button
                      class="bx--pagination__button bx--pagination__button--backward bx--pagination__button--no-index bx--btn bx--btn--ghost bx--btn--disabled bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
                      disabled=""
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="bx--assistive-text"
                      >
                        Previous page
                      </div>
                      <svg
                        aria-hidden="true"
                        aria-label="Previous page"
                        class="bx--btn__icon"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 32 32"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 24L10 16 20 8z"
                        />
                      </svg>
                    </button>
                    <button
                      class="bx--pagination__button bx--pagination__button--forward bx--pagination__button--no-index bx--btn bx--btn--ghost bx--btn--disabled bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-end"
                      disabled=""
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="bx--assistive-text"
                      >
                        Next page
                      </div>
                      <svg
                        aria-hidden="true"
                        aria-label="Next page"
                        class="bx--btn__icon"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 32 32"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 8L22 16 12 24z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bx--col-sm-12 bx--col-lg-12 bx--col-max-8"
          >
            <div
              class="bx--tile"
            >
              <div
                class="diagram"
                style="height: 300px;"
              >
                <div
                  style="width: 100%; height: 100%;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`temperature min max diagram with 11-day data 2`] = `
<div>
  <div
    class="bx--col"
  >
    <div
      class="bx--tile"
    >
      <div
        data-testid="temperature-min-max-diagram"
        style=""
      >
        <h3>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="32"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 10H27V12H20zM20 16H30V18H20zM20 22H27V24H20zM10 20.1839V7H8V20.1839a3 3 0 102 0z"
            />
            <path
              d="M30,4H12.9744A4.9829,4.9829,0,0,0,4,7V18.1108a7,7,0,1,0,10,0V7a5.0019,5.0019,0,0,0-.1011-1H30ZM9,28a4.9933,4.9933,0,0,1-3.332-8.7183L6,18.9834V7a3,3,0,0,1,6,0V18.9834l.332.2983A4.9933,4.9933,0,0,1,9,28Z"
            />
          </svg>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="32"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 4H27V6H20zM20 10H30V12H20zM20 16H27V18H20zM12 23a3 3 0 01-6 0z"
            />
            <path
              d="M30,22H15.9192A7.0107,7.0107,0,0,0,14,18.1108V7A5,5,0,0,0,4,7V18.1108A6.9946,6.9946,0,1,0,15.92,24H30ZM9,28a4.9933,4.9933,0,0,1-3.332-8.7183L6,18.9834V7a3,3,0,0,1,6,0V18.9834l.332.2983A4.9933,4.9933,0,0,1,9,28Z"
            />
          </svg>
          Minimum, maximum and average temperature
        </h3>
        <div
          class="bx--row"
        >
          <div
            class="bx--col-sm-6 bx--col-lg-6 bx--col-max-6"
          >
            <div
              class="bx--content-switcher bx--content-switcher--md"
              role="tablist"
            >
              <button
                aria-selected="false"
                class="bx--content-switcher-btn"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="bx--content-switcher__label"
                  title="Daily"
                >
                  Daily
                </span>
              </button>
              <button
                aria-selected="true"
                class="bx--content-switcher-btn bx--content-switcher--selected"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="bx--content-switcher__label"
                  title="Monthly"
                >
                  Monthly
                </span>
              </button>
              <button
                aria-selected="false"
                class="bx--content-switcher-btn"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="bx--content-switcher__label"
                  title="Yearly"
                >
                  Yearly
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="content bx--row"
        >
          <div
            class="bx--col-sm-12 bx--col-lg-12 bx--col-max-4"
          >
            <div
              class="bx--data-table-container"
            >
              <div
                class="bx--data-table-content"
              >
                <table
                  class="bx--data-table bx--data-table--short bx--data-table--sort bx--data-table--no-border"
                >
                  <thead>
                    <tr>
                      <th
                        aria-sort="ascending"
                        scope="col"
                      >
                        <div
                          id="table-sort-1"
                          style="display: none;"
                        >
                          Click to sort rows by [object Object] header in descending order
                        </div>
                        <button
                          aria-describedby="table-sort-1"
                          class="bx--table-sort bx--table-sort--active"
                          data-column-id="timeParsed"
                          data-sort-cycle="tri-states-from-ascending"
                          data-sort-direction="ASC"
                          type="button"
                        >
                          <span
                            class="bx--table-sort__flex"
                          >
                            <div
                              class="bx--table-header-label"
                            >
                              <div
                                style="display: flex; align-items: center; justify-content: space-between;"
                              >
                                <div
                                  style="margin-right: 20px;"
                                >
                                  Time
                                   
                                  <br />
                                  <span
                                    class="bx--type-helper-text-01"
                                  />
                                </div>
                                <button
                                  aria-describedby="icon-tooltip-4"
                                  class="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--bottom bx--tooltip--align-start"
                                  style="cursor: default;"
                                  type="button"
                                >
                                  <span
                                    class="bx--assistive-text"
                                    id="icon-tooltip-4"
                                  >
                                    Date format is YYYY/MM/DD HH:mm
                                  </span>
                                  <svg
                                    aria-hidden="true"
                                    fill="currentColor"
                                    focusable="false"
                                    height="16"
                                    preserveAspectRatio="xMidYMid meet"
                                    viewBox="0 0 16 16"
                                    width="16"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
                                    />
                                    <path
                                      d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
                                    />
                                  </svg>
                                </button>
                              </div>
                            </div>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon-unsorted"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </span>
                        </button>
                      </th>
                      <th
                        aria-sort="none"
                        scope="col"
                      >
                        <div
                          id="table-sort-2"
                          style="display: none;"
                        >
                          Click to sort rows by [object Object] header in ascending order
                        </div>
                        <button
                          aria-describedby="table-sort-2"
                          class="bx--table-sort"
                          data-column-id="temperature_min"
                          data-sort-cycle="tri-states-from-ascending"
                          data-sort-direction="NONE"
                          type="button"
                        >
                          <span
                            class="bx--table-sort__flex"
                          >
                            <div
                              class="bx--table-header-label"
                            >
                              <div
                                style="display: flex; align-items: center; justify-content: space-between;"
                              >
                                <div
                                  style="margin-right: 20px;"
                                >
                                  Minimum
                                   
                                  <br />
                                  <span
                                    class="bx--type-helper-text-01"
                                  >
                                    in °C
                                  </span>
                                </div>
                              </div>
                            </div>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon-unsorted"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </span>
                        </button>
                      </th>
                      <th
                        aria-sort="none"
                        scope="col"
                      >
                        <div
                          id="table-sort-3"
                          style="display: none;"
                        >
                          Click to sort rows by [object Object] header in ascending order
                        </div>
                        <button
                          aria-describedby="table-sort-3"
                          class="bx--table-sort"
                          data-column-id="temperature_average"
                          data-sort-cycle="tri-states-from-ascending"
                          data-sort-direction="NONE"
                          type="button"
                        >
                          <span
                            class="bx--table-sort__flex"
                          >
                            <div
                              class="bx--table-header-label"
                            >
                              <div
                                style="display: flex; align-items: center; justify-content: space-between;"
                              >
                                <div
                                  style="margin-right: 20px;"
                                >
                                  Average
                                   
                                  <br />
                                  <span
                                    class="bx--type-helper-text-01"
                                  >
                                    in °C
                                  </span>
                                </div>
                              </div>
                            </div>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon-unsorted"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </span>
                        </button>
                      </th>
                      <th
                        aria-sort="none"
                        scope="col"
                      >
                        <div
                          id="table-sort-4"
                          style="display: none;"
                        >
                          Click to sort rows by [object Object] header in ascending order
                        </div>
                        <button
                          aria-describedby="table-sort-4"
                          class="bx--table-sort"
                          data-column-id="temperature_max"
                          data-sort-cycle="tri-states-from-ascending"
                          data-sort-direction="NONE"
                          type="button"
                        >
                          <span
                            class="bx--table-sort__flex"
                          >
                            <div
                              class="bx--table-header-label"
                            >
                              <div
                                style="display: flex; align-items: center; justify-content: space-between;"
                              >
                                <div
                                  style="margin-right: 20px;"
                                >
                                  Maximum
                                   
                                  <br />
                                  <span
                                    class="bx--type-helper-text-01"
                                  >
                                    in °C
                                  </span>
                                </div>
                              </div>
                            </div>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon-unsorted"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </span>
                        </button>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    aria-live="polite"
                  >
                    <tr
                      data-row-id="032021"
                    >
                      <td>
                        2021/03
                      </td>
                      <td>
                        -10.5
                      </td>
                      <td>
                        -2.2
                      </td>
                      <td>
                        5.1
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                class="bx--pagination"
              >
                <div
                  class="bx--pagination__left"
                >
                  <label
                    class="bx--pagination__text"
                    for="bx-pagination-select-1"
                    id="bx-pagination-select-1-count-label"
                  >
                    Items per page:
                  </label>
                  <div
                    class="bx--form-item"
                  >
                    <div
                      class="bx--select bx--select--inline bx--select__item-count"
                    >
                      <div
                        class="bx--select-input--inline__wrapper"
                      >
                        <div
                          class="bx--select-input__wrapper"
                        >
                          <select
                            class="bx--select-input"
                            id="bx-pagination-select-1"
                          >
                            <option
                              class="bx--select-option"
                              value="20"
                            >
                              20
                            </option>
                          </select>
                          <svg
                            aria-hidden="true"
                            class="bx--select__arrow"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    class="bx--pagination__text bx--pagination__items-count"
                  >
                    1–1 of 1 items
                  </span>
                </div>
                <div
                  class="bx--pagination__right"
                >
                  <div
                    class="bx--form-item"
                  >
                    <div
                      class="bx--select bx--select--inline bx--select__page-number"
                    >
                      <label
                        class="bx--label bx--visually-hidden"
                        for="bx-pagination-select-1-right"
                      >
                        Page number, of 1 pages
                      </label>
                      <div
                        class="bx--select-input--inline__wrapper"
                      >
                        <div
                          class="bx--select-input__wrapper"
                        >
                          <select
                            class="bx--select-input"
                            id="bx-pagination-select-1-right"
                          >
                            <option
                              class="bx--select-option"
                              value="1"
                            >
                              1
                            </option>
                          </select>
                          <svg
                            aria-hidden="true"
                            class="bx--select__arrow"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    class="bx--pagination__text"
                  >
                    of 1 page
                  </span>
                  <div
                    class="bx--pagination__control-buttons"
                  >
                    <button
                      class="bx--pagination__button bx--pagination__button--backward bx--pagination__button--no-index bx--btn bx--btn--ghost bx--btn--disabled bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
                      disabled=""
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="bx--assistive-text"
                      >
                        Previous page
                      </div>
                      <svg
                        aria-hidden="true"
                        aria-label="Previous page"
                        class="bx--btn__icon"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 32 32"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 24L10 16 20 8z"
                        />
                      </svg>
                    </button>
                    <button
                      class="bx--pagination__button bx--pagination__button--forward bx--pagination__button--no-index bx--btn bx--btn--ghost bx--btn--disabled bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-end"
                      disabled=""
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="bx--assistive-text"
                      >
                        Next page
                      </div>
                      <svg
                        aria-hidden="true"
                        aria-label="Next page"
                        class="bx--btn__icon"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 32 32"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 8L22 16 12 24z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bx--col-sm-12 bx--col-lg-12 bx--col-max-8"
          >
            <div
              class="bx--tile"
            >
              <div
                class="diagram"
                style="height: 300px;"
              >
                <div
                  style="width: 100%; height: 100%;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`temperature min max diagram with 11-day data 3`] = `
<div>
  <div
    class="bx--col"
  >
    <div
      class="bx--tile"
    >
      <div
        data-testid="temperature-min-max-diagram"
        style=""
      >
        <h3>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="32"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 10H27V12H20zM20 16H30V18H20zM20 22H27V24H20zM10 20.1839V7H8V20.1839a3 3 0 102 0z"
            />
            <path
              d="M30,4H12.9744A4.9829,4.9829,0,0,0,4,7V18.1108a7,7,0,1,0,10,0V7a5.0019,5.0019,0,0,0-.1011-1H30ZM9,28a4.9933,4.9933,0,0,1-3.332-8.7183L6,18.9834V7a3,3,0,0,1,6,0V18.9834l.332.2983A4.9933,4.9933,0,0,1,9,28Z"
            />
          </svg>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="32"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 4H27V6H20zM20 10H30V12H20zM20 16H27V18H20zM12 23a3 3 0 01-6 0z"
            />
            <path
              d="M30,22H15.9192A7.0107,7.0107,0,0,0,14,18.1108V7A5,5,0,0,0,4,7V18.1108A6.9946,6.9946,0,1,0,15.92,24H30ZM9,28a4.9933,4.9933,0,0,1-3.332-8.7183L6,18.9834V7a3,3,0,0,1,6,0V18.9834l.332.2983A4.9933,4.9933,0,0,1,9,28Z"
            />
          </svg>
          Minimum, maximum and average temperature
        </h3>
        <div
          class="bx--row"
        >
          <div
            class="bx--col-sm-6 bx--col-lg-6 bx--col-max-6"
          >
            <div
              class="bx--content-switcher bx--content-switcher--md"
              role="tablist"
            >
              <button
                aria-selected="false"
                class="bx--content-switcher-btn"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="bx--content-switcher__label"
                  title="Daily"
                >
                  Daily
                </span>
              </button>
              <button
                aria-selected="false"
                class="bx--content-switcher-btn"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span
                  class="bx--content-switcher__label"
                  title="Monthly"
                >
                  Monthly
                </span>
              </button>
              <button
                aria-selected="true"
                class="bx--content-switcher-btn bx--content-switcher--selected"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="bx--content-switcher__label"
                  title="Yearly"
                >
                  Yearly
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="content bx--row"
        >
          <div
            class="bx--col-sm-12 bx--col-lg-12 bx--col-max-4"
          >
            <div
              class="bx--data-table-container"
            >
              <div
                class="bx--data-table-content"
              >
                <table
                  class="bx--data-table bx--data-table--short bx--data-table--sort bx--data-table--no-border"
                >
                  <thead>
                    <tr>
                      <th
                        aria-sort="ascending"
                        scope="col"
                      >
                        <div
                          id="table-sort-1"
                          style="display: none;"
                        >
                          Click to sort rows by [object Object] header in descending order
                        </div>
                        <button
                          aria-describedby="table-sort-1"
                          class="bx--table-sort bx--table-sort--active"
                          data-column-id="timeParsed"
                          data-sort-cycle="tri-states-from-ascending"
                          data-sort-direction="ASC"
                          type="button"
                        >
                          <span
                            class="bx--table-sort__flex"
                          >
                            <div
                              class="bx--table-header-label"
                            >
                              <div
                                style="display: flex; align-items: center; justify-content: space-between;"
                              >
                                <div
                                  style="margin-right: 20px;"
                                >
                                  Time
                                   
                                  <br />
                                  <span
                                    class="bx--type-helper-text-01"
                                  />
                                </div>
                                <button
                                  aria-describedby="icon-tooltip-7"
                                  class="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--bottom bx--tooltip--align-start"
                                  style="cursor: default;"
                                  type="button"
                                >
                                  <span
                                    class="bx--assistive-text"
                                    id="icon-tooltip-7"
                                  >
                                    Date format is YYYY/MM/DD HH:mm
                                  </span>
                                  <svg
                                    aria-hidden="true"
                                    fill="currentColor"
                                    focusable="false"
                                    height="16"
                                    preserveAspectRatio="xMidYMid meet"
                                    viewBox="0 0 16 16"
                                    width="16"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M8.5 11L8.5 6.5 6.5 6.5 6.5 7.5 7.5 7.5 7.5 11 6 11 6 12 10 12 10 11zM8 3.5c-.4 0-.8.3-.8.8S7.6 5 8 5c.4 0 .8-.3.8-.8S8.4 3.5 8 3.5z"
                                    />
                                    <path
                                      d="M8,15c-3.9,0-7-3.1-7-7s3.1-7,7-7s7,3.1,7,7S11.9,15,8,15z M8,2C4.7,2,2,4.7,2,8s2.7,6,6,6s6-2.7,6-6S11.3,2,8,2z"
                                    />
                                  </svg>
                                </button>
                              </div>
                            </div>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon-unsorted"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </span>
                        </button>
                      </th>
                      <th
                        aria-sort="none"
                        scope="col"
                      >
                        <div
                          id="table-sort-2"
                          style="display: none;"
                        >
                          Click to sort rows by [object Object] header in ascending order
                        </div>
                        <button
                          aria-describedby="table-sort-2"
                          class="bx--table-sort"
                          data-column-id="temperature_min"
                          data-sort-cycle="tri-states-from-ascending"
                          data-sort-direction="NONE"
                          type="button"
                        >
                          <span
                            class="bx--table-sort__flex"
                          >
                            <div
                              class="bx--table-header-label"
                            >
                              <div
                                style="display: flex; align-items: center; justify-content: space-between;"
                              >
                                <div
                                  style="margin-right: 20px;"
                                >
                                  Minimum
                                   
                                  <br />
                                  <span
                                    class="bx--type-helper-text-01"
                                  >
                                    in °C
                                  </span>
                                </div>
                              </div>
                            </div>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon-unsorted"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </span>
                        </button>
                      </th>
                      <th
                        aria-sort="none"
                        scope="col"
                      >
                        <div
                          id="table-sort-3"
                          style="display: none;"
                        >
                          Click to sort rows by [object Object] header in ascending order
                        </div>
                        <button
                          aria-describedby="table-sort-3"
                          class="bx--table-sort"
                          data-column-id="temperature_average"
                          data-sort-cycle="tri-states-from-ascending"
                          data-sort-direction="NONE"
                          type="button"
                        >
                          <span
                            class="bx--table-sort__flex"
                          >
                            <div
                              class="bx--table-header-label"
                            >
                              <div
                                style="display: flex; align-items: center; justify-content: space-between;"
                              >
                                <div
                                  style="margin-right: 20px;"
                                >
                                  Average
                                   
                                  <br />
                                  <span
                                    class="bx--type-helper-text-01"
                                  >
                                    in °C
                                  </span>
                                </div>
                              </div>
                            </div>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon-unsorted"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </span>
                        </button>
                      </th>
                      <th
                        aria-sort="none"
                        scope="col"
                      >
                        <div
                          id="table-sort-4"
                          style="display: none;"
                        >
                          Click to sort rows by [object Object] header in ascending order
                        </div>
                        <button
                          aria-describedby="table-sort-4"
                          class="bx--table-sort"
                          data-column-id="temperature_max"
                          data-sort-cycle="tri-states-from-ascending"
                          data-sort-direction="NONE"
                          type="button"
                        >
                          <span
                            class="bx--table-sort__flex"
                          >
                            <div
                              class="bx--table-header-label"
                            >
                              <div
                                style="display: flex; align-items: center; justify-content: space-between;"
                              >
                                <div
                                  style="margin-right: 20px;"
                                >
                                  Maximum
                                   
                                  <br />
                                  <span
                                    class="bx--type-helper-text-01"
                                  >
                                    in °C
                                  </span>
                                </div>
                              </div>
                            </div>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="bx--table-sort__icon-unsorted"
                              fill="currentColor"
                              focusable="false"
                              height="20"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="20"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                              />
                            </svg>
                          </span>
                        </button>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    aria-live="polite"
                  >
                    <tr
                      data-row-id="2021"
                    >
                      <td>
                        2021
                      </td>
                      <td>
                        -10.5
                      </td>
                      <td>
                        -2.2
                      </td>
                      <td>
                        5.1
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                class="bx--pagination"
              >
                <div
                  class="bx--pagination__left"
                >
                  <label
                    class="bx--pagination__text"
                    for="bx-pagination-select-1"
                    id="bx-pagination-select-1-count-label"
                  >
                    Items per page:
                  </label>
                  <div
                    class="bx--form-item"
                  >
                    <div
                      class="bx--select bx--select--inline bx--select__item-count"
                    >
                      <div
                        class="bx--select-input--inline__wrapper"
                      >
                        <div
                          class="bx--select-input__wrapper"
                        >
                          <select
                            class="bx--select-input"
                            id="bx-pagination-select-1"
                          >
                            <option
                              class="bx--select-option"
                              value="20"
                            >
                              20
                            </option>
                          </select>
                          <svg
                            aria-hidden="true"
                            class="bx--select__arrow"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    class="bx--pagination__text bx--pagination__items-count"
                  >
                    1–1 of 1 items
                  </span>
                </div>
                <div
                  class="bx--pagination__right"
                >
                  <div
                    class="bx--form-item"
                  >
                    <div
                      class="bx--select bx--select--inline bx--select__page-number"
                    >
                      <label
                        class="bx--label bx--visually-hidden"
                        for="bx-pagination-select-1-right"
                      >
                        Page number, of 1 pages
                      </label>
                      <div
                        class="bx--select-input--inline__wrapper"
                      >
                        <div
                          class="bx--select-input__wrapper"
                        >
                          <select
                            class="bx--select-input"
                            id="bx-pagination-select-1-right"
                          >
                            <option
                              class="bx--select-option"
                              value="1"
                            >
                              1
                            </option>
                          </select>
                          <svg
                            aria-hidden="true"
                            class="bx--select__arrow"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    class="bx--pagination__text"
                  >
                    of 1 page
                  </span>
                  <div
                    class="bx--pagination__control-buttons"
                  >
                    <button
                      class="bx--pagination__button bx--pagination__button--backward bx--pagination__button--no-index bx--btn bx--btn--ghost bx--btn--disabled bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
                      disabled=""
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="bx--assistive-text"
                      >
                        Previous page
                      </div>
                      <svg
                        aria-hidden="true"
                        aria-label="Previous page"
                        class="bx--btn__icon"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 32 32"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M20 24L10 16 20 8z"
                        />
                      </svg>
                    </button>
                    <button
                      class="bx--pagination__button bx--pagination__button--forward bx--pagination__button--no-index bx--btn bx--btn--ghost bx--btn--disabled bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-end"
                      disabled=""
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="bx--assistive-text"
                      >
                        Next page
                      </div>
                      <svg
                        aria-hidden="true"
                        aria-label="Next page"
                        class="bx--btn__icon"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 32 32"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 8L22 16 12 24z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bx--col-sm-12 bx--col-lg-12 bx--col-max-8"
          >
            <div
              class="bx--tile"
            >
              <div
                class="diagram"
                style="height: 300px;"
              >
                <div
                  style="width: 100%; height: 100%;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
